# x-dm-moderator

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  issues_todo.md  main.py  prek.toml  pyproject.toml  specs.md  todo.md  whitepaper.md
.claude/: README.md  hooks-config-example.json  settings.json
dmguard/: __init__.py  __main__.py  app.py  classifier_backend.py  classifier_contract.py  classifier_fake.py  classifier_llavaguard.py  classifier_runner.py  cli.py  config.py  db.py  edge.py  frame_extractor.py  job_machine.py  logging_setup.py  media_dispatch.py  media_download.py  moderator.py  paths.py  pruner.py  recovery.py  repo_audit.py  repo_common.py  repo_events.py  repo_jobs.py  repo_kv.py  repo_rejected.py  repo_senders.py  scheduler.py  schema.py  secrets.py  service_manager.py  setup_flow.py  setup_logger.py  setup_state.py  templates.py  webhook_auth.py  worker.py  x_client.py  x_dm.py  (+2 more)
docs/: installing.md
scripts/: install.ps1  uninstall.ps1
tests/: conftest.py  test_app.py  test_ci_workflow.py  test_classifier_backend.py  test_classifier_contract.py  test_classifier_fake.py  test_classifier_llavaguard.py  test_classifier_runner.py  test_cli.py  test_config.py  test_db.py  test_e2e_acceptance.py  test_edge.py  test_frame_extractor.py  test_job_machine.py  test_logging_setup.py  test_main_module.py  test_media_dispatch.py  test_media_download.py  test_moderator.py  test_paths.py  test_pruner.py  test_recovery.py  test_repo.py  test_scheduler.py  test_secrets.py  test_service_manager.py  test_setup_flow.py  test_setup_logger.py  test_setup_state.py  (+7 more)
(+15 files in other folders)
